<resources>
    <string name="app_name">Kill Bill</string>
    <string name="scan">Scan</string>
    <string name="scan_image">Scanned Image</string>
    <string name="take_picture">Take Picture</string>
    <string name="upload">Upload</string>
    <string name="payload_parser">Payload Parser</string>
    <string name="list_of_transactions">List of Transactions</string>
    <string name="random">Random</string>
    <string name="your_transactions">YOUR TRANSACTIONS</string>
    <string name="background">background</string>
    <string name="animation">animation</string>
    <string name="action_settings">settings</string>
    <string name="transaction_details">transaction details</string>
    <string name="logo">logo</string>
    <string name="first_name_last_name">First.name Last.name</string>
    <string name="edit_info">edit info</string>
    <string name="enter_name">Name:</string>
    <string name="enter_name_1">Enter name:</string>
    <string name="price">Price:</string>
    <string name="enter_value">Enter value:</string>
    <string name="quantity">Quantity:</string>
    <string name="enter_quantity">Enter Quantity:</string>
    <string name="back_to_transactions">Back to Transactions</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="amount_n_140_35">Amount £140.35</string>
    <string name="date_n_02_07_2020">Date   02/07/2020</string>
    <string name="kill_bill">KILL BILL</string>
    <string name="done">DONE</string>
    <string name="select_users">Select Users</string>
</resources>
